==> MeshyMcMeshFace/Face/components/lora/csrc/lora.c <==
#include "arduino.h"
#include "lora.h"
#include "esp_log.h"
#define REG_FIFO                 0x00
#define REG_OP_MODE              0x01
#define REG_FRF_MSB              0x06
#define REG_FRF_MID              0x07
#define REG_FRF_LSB              0x08
#define REG_PA_CONFIG            0x09
#define REG_LNA                  0x0c
#define REG_FIFO_ADDR_PTR        0x0d
#define REG_FIFO_TX_BASE_ADDR    0x0e
#define REG_FIFO_RX_BASE_ADDR    0x0f
#define REG_FIFO_RX_CURRENT_ADDR 0x10
#define REG_IRQ_FLAGS            0x12
#define REG_RX_NB_BYTES          0x13
#define REG_PKT_SNR_VALUE        0x19
#define REG_PKT_RSSI_VALUE       0x1a
#define REG_MODEM_CONFIG_1       0x1d
#define REG_MODEM_CONFIG_2       0x1e
#define REG_PREAMBLE_MSB         0x20
#define REG_PREAMBLE_LSB         0x21
#define REG_PAYLOAD_LENGTH       0x22
#define REG_MODEM_CONFIG_3       0x26
#define REG_RSSI_WIDEBAND        0x2c
#define REG_DETECTION_OPTIMIZE   0x31
#define REG_DETECTION_THRESHOLD  0x37
#define REG_SYNC_WORD            0x39
#define REG_DIO_MAPPING_1        0x40
#define REG_VERSION              0x42
#define MODE_LONG_RANGE_MODE     0x80
#define MODE_SLEEP               0x00
#define MODE_STDBY               0x01
#define MODE_TX                  0x03
#define MODE_RX_CONTINUOUS       0x05
#define MODE_RX_SINGLE           0x06
#define PA_BOOST                 0x80
#define IRQ_TX_DONE_MASK           0x08
#define IRQ_PAYLOAD_CRC_ERROR_MASK 0x20
#define IRQ_RX_DONE_MASK           0x40

void lora_init()
{
  ESP_LOGD(TAG,"lora_init");
  //TODO: FIXME: _spiSettings(8E6, MSBFIRST, SPI_MODE0),
  lora.ss=LORA_DEFAULT_SS_PIN ;
  lora.reset=LORA_DEFAULT_RESET_PIN;
  lora.dio0=LORA_DEFAULT_DIO0_PIN;
  lora.frequency=0;
  lora.packetIndex=0;
  lora.implicitHeaderMode=0;
  lora_onReceive(NULL);
  // overide Stream timeout value
  //setTimeout(0);
}

void lora_end()
{
    printf("lora_end\n");

  // put in sleep mode
  lora_sleep();

  // stop SPI
  //ARDUINO STUFF SPI.end();
}

int lora_beginPacket(int implicitHeader)
{
    printf("lora_beginPacket: %s\n", implicitHeader  ? "true" : "false");
  // put in standby mode
  lora_idle();

  if (implicitHeader) {
    lora_implicitHeaderMode();
  } else {
    lora_explicitHeaderMode();
  }

  // reset FIFO address and paload length
  lora_writeRegister(REG_FIFO_ADDR_PTR, 0);
  lora_writeRegister(REG_PAYLOAD_LENGTH, 0);

  return 1;
}

int lora_endPacket()
{
  printf("lora_endPacket\n");
  // put in TX mode
  lora_writeRegister(REG_OP_MODE, MODE_LONG_RANGE_MODE | MODE_TX);

  // wait for TX done
  while ((lora_readRegister(REG_IRQ_FLAGS) & IRQ_TX_DONE_MASK) == 0) {
    //TODO: ESP32/FreeRTOS specific task-sleep?
    yield();
  }

  // clear IRQ's
  lora_writeRegister(REG_IRQ_FLAGS, IRQ_TX_DONE_MASK);

  return 1;
}

int lora_parsePacket(int size)
{
  printf("lora_parsePacket: size = %d\n",size);
  int packetLength = 0;
  int irqFlags = lora_readRegister(REG_IRQ_FLAGS);

  if (size > 0) {
    lora_implicitHeaderMode();

    lora_writeRegister(REG_PAYLOAD_LENGTH, size & 0xff);
  } else {
    lora_explicitHeaderMode();
  }

  // clear IRQ's
  lora_writeRegister(REG_IRQ_FLAGS, irqFlags);

  if ((irqFlags & IRQ_RX_DONE_MASK) && (irqFlags & IRQ_PAYLOAD_CRC_ERROR_MASK) == 0) {
    // received a packet
    lora.packetIndex = 0;

    // read packet length
    if (lora.implicitHeaderMode) {
      packetLength = lora_readRegister(REG_PAYLOAD_LENGTH);
    } else {
      packetLength = lora_readRegister(REG_RX_NB_BYTES);
    }

    // set FIFO address to current RX address
    lora_writeRegister(REG_FIFO_ADDR_PTR, lora_readRegister(REG_FIFO_RX_CURRENT_ADDR));

    // put in standby mode
    lora_idle();
  } else if (lora_readRegister(REG_OP_MODE) != (MODE_LONG_RANGE_MODE | MODE_RX_SINGLE)) {
    // not currently in RX mode

    // reset FIFO address
    lora_writeRegister(REG_FIFO_ADDR_PTR, 0);

    // put in single RX mode
    lora_writeRegister(REG_OP_MODE, MODE_LONG_RANGE_MODE | MODE_RX_SINGLE);
  }

  return packetLength;
}

int lora_packetRssi()
{
  return (lora_readRegister(REG_PKT_RSSI_VALUE) - (lora.frequency < 868E6 ? 164 : 157));
}

float lora_packetSnr()
{
  return ((int8_t)lora_readRegister(REG_PKT_SNR_VALUE)) * 0.25;
}

int lora_available()
{
   printf("lora_available:\n");

  return (lora_readRegister(REG_RX_NB_BYTES) - lora.packetIndex);
}

int lora_read()
{
     printf("lora_read:\n");

  if (!lora_available()) {
    return -1;
  }

  lora.packetIndex++;

  return lora_readRegister(REG_FIFO);
}

int lora_peek()
{
       printf("lora_peek:\n");

  if (!lora_available()) {
    return -1;
  }

  // store current FIFO address
  int currentAddress = lora_readRegister(REG_FIFO_ADDR_PTR);

  // read
  uint8_t b = lora_readRegister(REG_FIFO);

  // restore FIFO address
  lora_writeRegister(REG_FIFO_ADDR_PTR, currentAddress);

  return b;
}

void lora_receive(int size)
{
       printf("lora_receive: size=%d\n",size);

  if (size > 0) {
    lora_implicitHeaderMode();

    lora_writeRegister(REG_PAYLOAD_LENGTH, size & 0xff);
  } else {
    lora_explicitHeaderMode();
  }

  lora_writeRegister(REG_OP_MODE, MODE_LONG_RANGE_MODE | MODE_RX_CONTINUOUS);
}

void lora_idle()
{
       printf("lora_idle:\n");

  lora_writeRegister(REG_OP_MODE, MODE_LONG_RANGE_MODE | MODE_STDBY);
}

void lora_sleep()
{
       printf("lora_sleep:\n");

  lora_writeRegister(REG_OP_MODE, MODE_LONG_RANGE_MODE | MODE_SLEEP);
}

void lora_setTxPower(int level, int outputPin)
{
  if (PA_OUTPUT_RFO_PIN == outputPin) {
    // RFO
    if (level < 0) {
      level = 0;
    } else if (level > 14) {
      level = 14;
    }

    lora_writeRegister(REG_PA_CONFIG, 0x70 | level);
  } else {
    // PA BOOST
    if (level < 2) {
      level = 2;
    } else if (level > 17) {
      level = 17;
    }

    lora_writeRegister(REG_PA_CONFIG, PA_BOOST | (level - 2));
  }
}

void lora_setFrequency(long frequency)
{
       printf("lora_setFrequency: %ld\n",frequency);

  lora.frequency = frequency;

  uint64_t frf = ((uint64_t)frequency << 19) / 32000000;

  lora_writeRegister(REG_FRF_MSB, (uint8_t)(frf >> 16));
  lora_writeRegister(REG_FRF_MID, (uint8_t)(frf >> 8));
  lora_writeRegister(REG_FRF_LSB, (uint8_t)(frf >> 0));
}

void lora_setSpreadingFactor(int sf)
{
       printf("lora_setSpreadingFactor: sf=%d\n",sf);

  if (sf < 6) {
    sf = 6;
  } else if (sf > 12) {
    sf = 12;
  }

  if (sf == 6) {
    lora_writeRegister(REG_DETECTION_OPTIMIZE, 0xc5);
    lora_writeRegister(REG_DETECTION_THRESHOLD, 0x0c);
  } else {
    lora_writeRegister(REG_DETECTION_OPTIMIZE, 0xc3);
    lora_writeRegister(REG_DETECTION_THRESHOLD, 0x0a);
  }

  lora_writeRegister(REG_MODEM_CONFIG_2, (lora_readRegister(REG_MODEM_CONFIG_2) & 0x0f) | ((sf << 4) & 0xf0));
}

void lora_setSignalBandwidth(long sbw)
{
       printf("lora_setSignalBandwidth: sbw=%ld\n",sbw);

  int bw;

  if (sbw <= 7.8E3) {
    bw = 0;
  } else if (sbw <= 10.4E3) {
    bw = 1;
  } else if (sbw <= 15.6E3) {
    bw = 2;
  } else if (sbw <= 20.8E3) {
    bw = 3;
  } else if (sbw <= 31.25E3) {
    bw = 4;
  } else if (sbw <= 41.7E3) {
    bw = 5;
  } else if (sbw <= 62.5E3) {
    bw = 6;
  } else if (sbw <= 125E3) {
    bw = 7;
  } else if (sbw <= 250E3) {
    bw = 8;
  } else /*if (sbw <= 250E3)*/ {
    bw = 9;
  }

  lora_writeRegister(REG_MODEM_CONFIG_1, (lora_readRegister(REG_MODEM_CONFIG_1) & 0x0f) | (bw << 4));
}

void lora_setCodingRate4(int denominator)
{
       printf("lora_setCodingRate4: %d\n",denominator);

  if (denominator < 5) {
    denominator = 5;
  } else if (denominator > 8) {
    denominator = 8;
  }

  int cr = denominator - 4;

  lora_writeRegister(REG_MODEM_CONFIG_1, (lora_readRegister(REG_MODEM_CONFIG_1) & 0xf1) | (cr << 1));
}

void lora_setPreambleLength(long length)
{
       printf("lora_setPreambleLength: %ld\n",length);

  lora_writeRegister(REG_PREAMBLE_MSB, (uint8_t)(length >> 8));
  lora_writeRegister(REG_PREAMBLE_LSB, (uint8_t)(length >> 0));
}

void lora_setSyncWord(int sw)
{
       printf("lora_setSyncWord: %d\n",sw);

  lora_writeRegister(REG_SYNC_WORD, sw);
}

void lora_enableCrc()
{
  lora_writeRegister(REG_MODEM_CONFIG_2, lora_readRegister(REG_MODEM_CONFIG_2) | 0x04);
}

void lora_disableCrc()
{
  lora_writeRegister(REG_MODEM_CONFIG_2, lora_readRegister(REG_MODEM_CONFIG_2) & 0xfb);
}

uint8_t lora_random()
{
  return lora_readRegister(REG_RSSI_WIDEBAND);
}

void lora_explicitHeaderMode()
{
  lora.implicitHeaderMode = 0;

  lora_writeRegister(REG_MODEM_CONFIG_1, lora_readRegister(REG_MODEM_CONFIG_1) & 0xfe);
}

void lora_implicitHeaderMode()
{
  lora.implicitHeaderMode = 1;

  lora_writeRegister(REG_MODEM_CONFIG_1, lora_readRegister(REG_MODEM_CONFIG_1) | 0x01);
}

void lora_handleDio0Rise()
{
  int irqFlags = lora_readRegister(REG_IRQ_FLAGS);

  // clear IRQ's
  lora_writeRegister(REG_IRQ_FLAGS, irqFlags);

  if ((irqFlags & IRQ_PAYLOAD_CRC_ERROR_MASK) == 0) {
    // received a packet
    lora.packetIndex = 0;

    // read packet length
    int packetLength = lora.implicitHeaderMode ? lora_readRegister(REG_PAYLOAD_LENGTH) : lora_readRegister(REG_RX_NB_BYTES);

    // set FIFO address to current RX address
    lora_writeRegister(REG_FIFO_ADDR_PTR, lora_readRegister(REG_FIFO_RX_CURRENT_ADDR));

    if (lora.onReceive) {
      lora.onReceive(packetLength);
    }

    // reset FIFO address
    lora_writeRegister(REG_FIFO_ADDR_PTR, 0);
  }
}

uint8_t lora_readRegister(uint8_t address)
{
  return lora_singleTransfer(address & 0x7f, 0x00);
}

void lora_writeRegister(uint8_t address, uint8_t value)
{
  lora_singleTransfer(address | 0x80, value);
}

uint8_t lora_singleTransfer(uint8_t address, uint8_t value)
{
  //TODO: to fix...
  uint8_t response;

  digitalWrite(lora.ss, LOW);

  //check if last freq changed
  uint32_t cdiv = spiGetClockDiv(lora.spi);
  if((lora.div != cdiv) || lora.spifreq_changed)
  {
    lora.spifreq_changed = false;
    lora.div = spiFrequencyToClockDiv(lora.frequency);
  }
  // MSBFIRST, SPI_MODE0
  spiTransaction(lora.spi,lora.div,SPI_MSBFIRST,SPI_MODE0);
  response = spiTransferByteNL(lora.spi,value);
  spiEndTransaction(lora.spi);
  digitalWrite(lora.ss, HIGH);

  return response;
}
